Some code scrubbing